--- a/Contributors.html
+++ b/Contributors.html
@@ -94,7 +94,7 @@
     <div class="container">
 
       <div class="heart"></div>
-cses
+<!-- I am removing it .Its look very ugly--> 
       <label class="theme-switch" for="checkbox">
 
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sun"
@@ -325,6 +325,8 @@ cses
 <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
 <a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
 <a class="box-item" href="https://github.com/VibhuGautam"><span>Vibhu Gautam</span></a>
+      <a class="box-item" href="https://github.com/pratham182"><span>Pratham Arora</span></a>
+ 
 
 
 
