--- a/Contributors.html
+++ b/Contributors.html
@@ -574,13 +574,13 @@ cses
         <a class="box-item" href="https://github.com/pravigya"><span>Pravigya jain</span></a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
         <a class="box-item" href="https://github.com/JuniorXcoder"><span>JuniorXcoder</span></a>
-       <a class="box-item" href="https://github.com/aryankashyap7"><span>Aryan Kashyap</span></a>
-      <a class="box-item" href="https://github.com/robertnjenga"><span>Robert Njenga</span></a>
-       <a class="box-item" href="https://github.com/geekygirl8"><span>NIKITA</span></a>
-      <a class=*box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
+        <a class="box-item" href="https://github.com/aryankashyap7"><span>Aryan Kashyap</span></a>
+        <a class="box-item" href="https://github.com/robertnjenga"><span>Robert Njenga</span></a>
+        <a class="box-item" href="https://github.com/geekygirl8"><span>NIKITA</span></a>
+        <a class=*box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
         <a class="box-item" href="https://github.com/alishaac"><span>Alisha Chauhan</span></a>
-        
+        <a class="box-item" href="https://github.com/DevanshUpadhyay26"><span>Devansh Upadhyay</span></a>
 
         <!-- Please maintain the alignment... -->
 
