--- a/Contributors.html
+++ b/Contributors.html
@@ -117,6 +117,7 @@ cses
 
 
 <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+<a class="box-item" href="https://github.com/MrRobot3301"><span>Prashant Gupta</span></a>
 <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
 <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
 <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
@@ -325,6 +326,7 @@ cses
 <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
 <a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
 <a class="box-item" href="https://github.com/VibhuGautam"><span>Vibhu Gautam</span></a>
+<a class="box-item" href="https://github.com/MrRobot3301"><span>Prashant Gupta</span></a>
 
 
 
@@ -580,6 +582,7 @@ cses
       <a class=*box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
         <a class="box-item" href="https://github.com/alishaac"><span>Alisha Chauhan</span></a>
+      <a class="box-item" href="https://github.com/MrRobot3301"><span>Prashant Gupta</span></a>
         
 
         <!-- Please maintain the alignment... -->
