added search button

--- a/Contributors.html
+++ b/Contributors.html
@@ -51,6 +51,7 @@
   <link rel="stylesheet" href="css/explosion.css">
   <link rel="stylesheet" href="./css/terminal.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Hacktoberfest 2021 - Contributors</title>
 </head>
 
@@ -122,7 +123,12 @@
         </div>
         <label class="theme-switch" for="checkbox">
           <input type="checkbox" id="checkbox" />
-          <div class="slider round"></div>
+          <form class="search" action="https://github.com/fineanmol/Hacktoberfest2021/blob/master/Contributors.html" style="margin:auto;max-width:300px">
+            <input type="text" placeholder="Search.." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+
+
         </label>
       </div>
       <div class="box mx-auto">
