Fix alignment and contributors list, add name

--- a/Contributors.html
+++ b/Contributors.html
@@ -312,9 +312,7 @@ cses
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
 <a class="box-item" href="https://github.com/alfaniM"><span>M. Aulia Alfani</span></a>
 <a class="box-item" href="https://github.com/soumyajit1999"><span>Soumyajit Sen</span></a>
-
 <a class="box-item" href="https://github.com/vishnuramv"><span>Vishnu Ram V</span></a>
-
 <a class="box-item" href="https://github.com/nyctonio"><span>Ritesh Kumar</span></a>
 <a class="box-item" href="https://github.com/geeky01adarsh"><span>Adarsh Navneet Sinha</span></a>
 <a class="box-item" href="https://github.com/RAJASETHI"><span>Raja Sethi</span></a>
@@ -325,15 +323,8 @@ cses
 <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
 <a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
 <a class="box-item" href="https://github.com/VibhuGautam"><span>Vibhu Gautam</span></a>
-
-
-
+<a class="box-item" href="https://github.com/beanscribbles"><span>Bean</span></a>
       <!-- Please maintain the alignment... -->
-
-
-
-
-
 
 
       <div class="wrapper">
@@ -574,13 +565,13 @@ cses
         <a class="box-item" href="https://github.com/pravigya"><span>Pravigya jain</span></a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
         <a class="box-item" href="https://github.com/JuniorXcoder"><span>JuniorXcoder</span></a>
-       <a class="box-item" href="https://github.com/aryankashyap7"><span>Aryan Kashyap</span></a>
-      <a class="box-item" href="https://github.com/robertnjenga"><span>Robert Njenga</span></a>
-       <a class="box-item" href="https://github.com/geekygirl8"><span>NIKITA</span></a>
-      <a class=*box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
+        <a class="box-item" href="https://github.com/aryankashyap7"><span>Aryan Kashyap</span></a>
+        <a class="box-item" href="https://github.com/robertnjenga"><span>Robert Njenga</span></a>
+        <a class="box-item" href="https://github.com/geekygirl8"><span>NIKITA</span></a>
+        <a class="box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
         <a class="box-item" href="https://github.com/alishaac"><span>Alisha Chauhan</span></a>
-        
+        <a class="box-item" href="https://github.com/tannudaral"><span>Tannu Daral</span></a>
 
         <!-- Please maintain the alignment... -->
 
