--- a/Contributors.html
+++ b/Contributors.html
@@ -559,6 +559,7 @@ cses
         <a class="box-item" href="https://github.com/priyanshu-28"><span>Priyanshu Pathak</span></a>
         <a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
         <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
+        <a class="box-item" href="https://github.com/mkhira2"><span>Kenji Hirabayashi</span></a>
         <a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
         <a class="box-item" href="https://github.com/haylzrandom"><span>Haylzrandom</span></a>
         <a class="box-item" href="https://github.com/Krishnapro"><span>Krishna Kumar</span> </a>
