--- a/Contributors.html
+++ b/Contributors.html
@@ -299,6 +299,7 @@ cses
 <a class="box-item" href="https://github.com/KVChandrashekar"><span>Chandrashekar K V</span></a>
 <a class="box-item" href="https://github.com/sarvekash"><span>Sarvekash Aggarwal</span></a>
 <a class="box-item" href="https://github.com/mthakur7"><span>Manju Thakur</span></a>
+<a class="box-item" href="https://github.com/NEELAKANTAGOUDAPATIL"><span>N B Patil</span></a>
 <a class="box-item" href="https://github.com/utsaverma2001-crypto"><span>Utsav Verma</span></a>
 <a class="box-item" href="https://github.com/whatharshcodes"><span>Harsh</span></a>
 <a class="box-item" href="https://github.com/thet3o"><span>Matteo Vacalebri</span></a>
@@ -384,6 +385,7 @@ cses
         <a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
         <a class="box-item" href="https://github.com/rajneeshk94"><span>Rajneesh Khare</span></a>
         <a class="box-item" href="https://github.com/milos5593"><span>Milos Vujinic</span></a>
+        <a class="box-item" href="https://github.com/NEELAKANTAGOUDAPATIL"><span>N B Patil</span></a>
         <a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
         <a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
         <a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>
