--- a/Contributors.html
+++ b/Contributors.html
@@ -124,6 +124,7 @@ cses
 <a class="box-item" href="https://github.com/dwikychandra21"><span>Dwiky Chandra</span></a>
 <a class="box-item" href="https://github.com/ritesh2905"><span>Ritesh Kumar</span></a>
 <a class="box-item" href="https://github.com/xevenheaven"><span>Elysia Ong</span></a>
+<a class="box-item" href="https://github.com/amanmagar"><span>Aman Samal Magar</span></a>
 <a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
 <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
 <a class="box-item" href="https://github.com/Hrishabh5"><span>Hrishabh Jain</span></a>
