--- a/Contributors.html
+++ b/Contributors.html
@@ -325,6 +325,7 @@ cses
 <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
 <a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
 <a class="box-item" href="https://github.com/VibhuGautam"><span>Vibhu Gautam</span></a>
+<a class="box-item" href="https://github.com/MahimaKhatri"><span>Mahima Khatri</span></a>
 
 
 
@@ -580,6 +581,7 @@ cses
       <a class=*box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
         <a class="box-item" href="https://github.com/alishaac"><span>Alisha Chauhan</span></a>
+       <a class="box-item" href="https://github.com/MahimaKhatri"><span>Mahima Khatri</span></a>
         
 
         <!-- Please maintain the alignment... -->
