Update C++ Programs on Linked Lists and Arraus

--- a/Contributors.html
+++ b/Contributors.html
@@ -352,6 +352,7 @@ cses
 
         <!-- Add to the bottom of the list -->
         <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+        <a class="box-item" href="https://github.com/samyaksand"><span>Samyak Sand</span></a>
         <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
         <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
         <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
@@ -580,6 +581,8 @@ cses
       <a class=*box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
         <a class="box-item" href="https://github.com/alishaac"><span>Alisha Chauhan</span></a>
+
+
         
 
         <!-- Please maintain the alignment... -->
