--- a/Contributors.html
+++ b/Contributors.html
@@ -325,6 +325,7 @@ cses
 <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
 <a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
 <a class="box-item" href="https://github.com/VibhuGautam"><span>Vibhu Gautam</span></a>
+<a class="box-item" href="https://github.com/chetanguptamrt"><span>Chetan Gupta</span></a>
 
 
 
