--- a/Contributors.html
+++ b/Contributors.html
@@ -580,6 +580,7 @@ cses
       <a class=*box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
         <a class="box-item" href="https://github.com/alishaac"><span>Alisha Chauhan</span></a>
+        <a class="box-item" href="https://github.com/Aryannath"><span>Aryan Nath</span></a>
         
 
         <!-- Please maintain the alignment... -->
