--- a/Contributors.html
+++ b/Contributors.html
@@ -325,7 +325,7 @@ cses
 <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
 <a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
 <a class="box-item" href="https://github.com/VibhuGautam"><span>Vibhu Gautam</span></a>
-
+<a class="box-item" href="https://github.com/nuruslaily"><span>Nurus Laily</span></a>
 
 
       <!-- Please maintain the alignment... -->
@@ -580,7 +580,7 @@ cses
       <a class=*box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
         <a class="box-item" href="https://github.com/alishaac"><span>Alisha Chauhan</span></a>
-        
+        <a class="box-item" href="https://github.com/nuruslaily"><span>Nurus Laily</span></a>
 
         <!-- Please maintain the alignment... -->
 
