--- a/Contributors.html
+++ b/Contributors.html
@@ -354,6 +354,7 @@ cses
         <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
         <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
         <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
+        <a class="box-item" href="https://github.com/Rozen2007/"><span>Rozen Deedi</span></a>
         <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
         <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
         <a class="box-item" href="https://github.com/dwikychandra21"><span>Dwiky Chandra</span></a>
