--- a/Contributors.html
+++ b/Contributors.html
@@ -337,6 +337,7 @@
       <a class="box-item" href="https://github.com/JuniorXcoder"><span>JuniorXcoder</span></a>
       <a class="box-item" href="https://github.com/aryankashyap7"><span>Aryan Kashyap</span></a>
       <a class="box-item" href="https://github.com/robertnjenga"><span>Robert Njenga</span></a>
+      <a class="box-item" href="https://github.com/padmaja2305"><span>Padmaja Joshi</span></a>
       <a class="box-item" href="https://github.com/geekygirl8"><span>NIKITA</span></a>
       <a class="box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
       <a class="box-item" href="https://github.com/alishaac"><span>Alisha Chauhan</span></a>
