--- a/Contributors.html
+++ b/Contributors.html
@@ -345,6 +345,7 @@
       <a class="box-item" href="https://github.com/NEELAKANTAGOUDAPATIL"><span>NEELAKANTA GOUDA PATIL</span></a>
       <a class="box-item" href="https://github.com/shashishekhar11"><span>shashishekhar11</span></a>
       <a class="box-item" href="https://github.com/H-M-Noman123"><span>H-M-Noman123</span></a>
+      <a class="box-item" href="https://github.com/Srijan0101"><span>Srijan0101</span></a>
 
 
 
