Added animated toggle switch with moon and sun emojis

--- a/Contributors.html
+++ b/Contributors.html
@@ -88,7 +88,7 @@
       <span class="heading">CONTRIBUTERS </span>
 
       <div class="heart"></div>
-      <label class="theme-switch" for="checkbox">
+      <!-- <label class="theme-switch" for="checkbox">
 
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sun"
           viewBox="0 0 16 16">
@@ -103,7 +103,11 @@
         <input type="checkbox" class="checkbox" id="checkbox" />
 
         <div class="slider round"></div>
-      </label>
+      </label> -->
+            <div class="tdnn">
+        <div class="moon">
+        </div>
+      </div>
       <p class=" rubberBand delay-4s">Add yourself to the list if you contribute.</p>
       <hr style="width:80%">
     </div>
@@ -349,6 +353,7 @@
       <a class="box-item" href="https://github.com/NEELAKANTAGOUDAPATIL"><span>NEELAKANTA GOUDA PATIL</span></a>
       <a class="box-item" href="https://github.com/shashishekhar11"><span>shashishekhar11</span></a>
       <a class="box-item" href="https://github.com/H-M-Noman123"><span>H-M-Noman123</span></a>
+                <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
 
 
 
@@ -421,6 +426,14 @@
   <div class="container">
     <div id="stats" style="margin-top: 1rem;"></div>
   </div>
+  <script>
+    $('.tdnn').click(function () {
+      $("body").toggleClass('light');
+      $(".moon").toggleClass('sun');
+      $(".tdnn").toggleClass('day');
+    });
+  </script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 </body>
 
 </html>
