--- a/Contributors.html
+++ b/Contributors.html
@@ -343,6 +343,7 @@
       <a class="box-item" href="https://github.com/robertnjenga"><span>Robert Njenga</span></a>
       <a class="box-item" href="https://github.com/geekygirl8"><span>NIKITA</span></a>
       <a class="box-item" href="https://github.com/mariosamaaa"><span>mArio</span><a>
+      <a class="box-item" href="https://github.com/snorlaxzeroone"><span>Afdlol</span></a>
       <a class="box-item" href="https://github.com/alishaac"><span>Alisha Chauhan</span></a>
       <a class="box-item" href="https://github.com/MahimaKhatri"><span>Mahima Khatri</span></a>
       <a class="box-item" href="https://github.com/vishwasluhana"><span>Vishwa Mittar</span></a>
