--- a/Contributors.html
+++ b/Contributors.html
@@ -355,6 +355,7 @@
       <a class="box-item" href="https://github.com/shashishekhar11"><span>shashishekhar11</span></a>
       <a class="box-item" href="https://github.com/H-M-Noman123"><span>H-M-Noman123</span></a>
       <a class="box-item" href="https://github.com/barunipriyats/"><span>Baruni Priya T S</span></a>
+      <a class="box-item" href="https://github.com/Jayati15"><span>Jayati Dixit</span></a>
 
 
 
