added the color of stats which was earlier not visible in dark mode

--- a/Contributors.html
+++ b/Contributors.html
@@ -328,6 +328,7 @@
         <a class="box-item" href="https://github.com/Aman1905"><span>Aman Chopra</span></a>
         <a class="box-item" href="https://github.com/mofazil17"><span>Mohamed Fazil</span></a>
         <a class="box-item" href="https://github.com/Tejaswi-Kumar"><span>Tejaswi Kumar</span></a>
+        <a class="box-item" href="https://github.com/ANIIIKKETT"><span>Aniket Thakre</span></a>
 
         
         <!-- Please maintain the alignment... -->
@@ -381,7 +382,11 @@
 
   <script src="./scripts/menu.js"></script>
   <div class="container">
-    <div id="stats" style="margin-top: 1rem;"></div>
+    <div id="stats" style="margin-top: 1rem; color: black;">
+      You guys are awesome, we have passed the github rate again this hour. 
+      <a href="https://github.com/fineanmol/Hacktoberfest2k21">Here</a>
+       is a link to repo to check out live stats
+    </div>
   </div>
 </body>
 
