--- a/Contributors.html
+++ b/Contributors.html
@@ -50,8 +50,14 @@
 
 <body>
 
+
+
   <!-- Back-to-top Button -->
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
+
+  
   <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
+
 
   <!--
       __  __              __    __          __                 ____             __
@@ -487,6 +493,31 @@
       $(".tdnn").toggleClass('day');
     });
   </script>
+
+<script>
+//Get the button
+var mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
+
+
+
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 </body>
 
