Added some info

--- a/Program's_Contributed_By_Contributors/HTML Designs/Portfolio/index.html
+++ b/Program's_Contributed_By_Contributors/HTML Designs/Portfolio/index.html
@@ -67,8 +67,7 @@
                 <span>Abhay Gupta</span>
                 <span>Full-Stack Web Developer / Python enthusiast / Automation Geek</span>
                 <div>
-                    Lorem ipsum dolor sit fffwefwefewfe ew wegwegwegw fwe fweLorem ipsum dolor sit fffwefwefewfe ew
-                    wegwegwegw fwe fwe
+                   Aspiring Full stack Developer . 
 
                 </div>
                 <div class="btn-container">
