--- a/Contributors.html
+++ b/Contributors.html
@@ -171,6 +171,7 @@
       <a class="box-item" href="https://github.com/zomsik"><span>Tomasz Wiejak</span></a>
       <a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a>
       <a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a>
+      <a class="box-item" href="https://github.com/Lakshay0786"><span>Lakshay sharma</span></a>
       <a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a>
       <a class="box-item" href="https://github.com/haryanapnx"><span>Haryfun</span></a>
       <a class="box-item" href="https://github.com/ishaan-10"><span>Ishaan</span></a>
