--- a/Contributors.html
+++ b/Contributors.html
@@ -366,7 +366,7 @@
       <a class="box-item" href="https://github.com/H-M-Noman123"><span>H-M-Noman123</span></a>
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
-
+      <a class="box-item" href="https://github.com/Ishika-Jaiswal"><span>Ishika JAiswal</span></a>
 
 
 
