--- a/Contributors.html
+++ b/Contributors.html
@@ -96,7 +96,7 @@
   </nav>
   <div class="content">
     <div class="container">
-      <span class="heading">CONTRIBUTORS </span>
+      <span class="heading" style="color:white;>CONTRIBUTORS </span>
 
       <div class="heart"></div>
       <!-- <label class="theme-switch" for="checkbox">
@@ -119,7 +119,7 @@
         <div class="moon">
         </div>
       </div>
-      <p class=" rubberBand delay-4s">Add yourself to the list if you contribute.</p>
+      <p class=" rubberBand delay-4s" style="color:white;">Add yourself to the list if you contribute.</p>
       <hr style="width:80%">
     </div>
     <div class="box mx-auto">
@@ -366,6 +366,7 @@
       <a class="box-item" href="https://github.com/H-M-Noman123"><span>H-M-Noman123</span></a>
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
+      <a class="box-item" href="https://github.com/PaarthAgarwal"><span>Paarth Agarwal</span></a>
 
 
 
