--- a/Contributors.html
+++ b/Contributors.html
@@ -89,7 +89,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav mr-auto" id="menu">
+      <ul class="navbar-nav mr-auto" id="menu" style="font-weight: bold;">
         <!-- Menu -->
       </ul>
     </div>
