--- a/Contributors.html
+++ b/Contributors.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Contributors.html<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -366,6 +366,7 @@
       <a class="box-item" href="https://github.com/H-M-Noman123"><span>H-M-Noman123</span></a>
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
+      <a class="box-item" href="https://github.com/garridorafa"><span>Rafa Garrido</span></a>
 
 
 
