--- a/Contributors.html
+++ b/Contributors.html
@@ -367,6 +367,7 @@
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/gulshanjakhon"><span>Gulshan Jakhon</span></a>
+      <a class="box-item" href="https://github.com/ishika07"><span>Ishika Shrivastava</span></a>
 
 
 
