add deulizealand profile links

--- a/Contributors.html
+++ b/Contributors.html
@@ -5,7 +5,7 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <link rel="icon" href="https://hacktoberfestswaglist.com/img/Hacktoberfest_21.jpg" type="image/x-icon">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74296045-6"></script>
- 
+
   <!--Stats Script-->
   <script src="scripts/stats.js"></script>
   <meta charset="UTF-8">
@@ -55,7 +55,7 @@
   <!-- Back-to-top Button -->
   <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
-  
+
   <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
 
 
@@ -367,6 +367,7 @@
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/gulshanjakhon"><span>Gulshan Jakhon</span></a>
+      <a class="box-item" href="https://github.com/deulizealand"><span>Hendra Juli</span></a>
 
 
 
