--- a/Contributors.html
+++ b/Contributors.html
@@ -65,7 +65,7 @@
     / /_/ // __ `// ___// //_// __// __ \ / __ \ / _ \ / ___// /_ / _ \ / ___// __/
   / __  // /_/ // /__ / ,<  / /_ / /_/ // /_/ //  __// /   / __//  __/(__  )/ /_
   /_/ /_/ \__,_/ \___//_/|_| \__/ \____//_.___/ \___//_/   /_/   \___//____/ \__/
-                                              i just want a t-shirt at this point
+                                              i just want to learn at this point
   -->
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm">
