--- a/Contributors.html
+++ b/Contributors.html
@@ -367,7 +367,7 @@
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/gulshanjakhon"><span>Gulshan Jakhon</span></a>
-
+      <a class="box-item" href="https://github.com/tamzytam"><span>Tamzytam</span></a>
 
 
 
