clean the contributor alignment code

--- a/Contributors.html
+++ b/Contributors.html
@@ -49,15 +49,9 @@
 </head>
 
 <body>
-
-
-
   <!-- Back-to-top Button -->
   <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
-
-  
   <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
-
 
   <!--
       __  __              __    __          __                 ____             __
@@ -67,6 +61,7 @@
   /_/ /_/ \__,_/ \___//_/|_| \__/ \____//_.___/ \___//_/   /_/   \___//____/ \__/
                                               i just want a t-shirt at this point
   -->
+
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm">
     <a class="navbar-brand" href="/">
@@ -100,7 +95,6 @@
 
       <div class="heart"></div>
       <!-- <label class="theme-switch" for="checkbox">
-
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sun"
           viewBox="0 0 16 16">
           <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
@@ -124,9 +118,7 @@
     </div>
     <div class="box mx-auto">
 
-
-
-      <!-- Add to the bottom of the list -->
+      <!-- Add your name to the bottom of this contributor list -->
       <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
       <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
       <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
@@ -366,16 +358,7 @@
       <a class="box-item" href="https://github.com/H-M-Noman123"><span>H-M-Noman123</span></a>
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
-
-
-
-
-          <!-- Please maintain the alignment... -->
-
-
-
-
-
+      <!-- The end of contributor list -->
 
     </div>
   </div>
@@ -430,7 +413,6 @@
         span.classList.add('active');
       }, 750 * (idx + 1))
     });
-
 
     /* Back-to-top button functionality */
   const backToTopButton = document.querySelector("#back-to-top-btn");
@@ -515,10 +497,7 @@ function topFunction() {
   document.documentElement.scrollTop = 0;
 }
 </script>
-
-
-
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 </body>
 
 </html>
