fix header switch color (dark/light mode)

--- a/Contributors.html
+++ b/Contributors.html
@@ -91,7 +91,7 @@
   </nav>
   <div class="content">
     <div class="container">
-      <span class="heading">CONTRIBUTORS </span>
+      <span class="heading">CONTRIBUTORS</span>
 
       <div class="heart"></div>
       <!-- <label class="theme-switch" for="checkbox">
@@ -113,7 +113,7 @@
         <div class="moon">
         </div>
       </div>
-      <p class=" rubberBand delay-4s">Add yourself to the list if you contribute.</p>
+      <p class="rubberBand delay-4s">Add yourself to the list if you contribute.</p>
       <hr style="width:80%">
     </div>
     <div class="box mx-auto">
@@ -474,6 +474,8 @@
       $("body").toggleClass('light');
       $(".moon").toggleClass('sun');
       $(".tdnn").toggleClass('day');
+      $(".heading").toggleClass('header-dark');
+      $(".rubberBand").toggleClass('header-dark');
     });
   </script>
 
